feat: add csv parsing support and refactor project structure